# kzg-ceremony-cli

./: Cargo.toml  readme.md
src/: args.rs  commands.rs  constants.rs  files.rs  main.rs  rest_api.rs
src/commands/: capture_entropy.rs  contribute.rs  login.rs  logout.rs  poll.rs  receipt.rs  status.rs  user.rs  view_transcript.rs
src/commands/login/: local_server.rs
