[package]
name = "eth-kzg-cli"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "3.2.20", features = ["derive"] }
env_logger = "*"
log = "*"
axum = "*"
tokio = { version = "1", features = ["full"] }
open = "3.0.2"
serde_json = "1.0"
serde = { version = "*", features = ["derive"] }
reqwest = { version = "0.11", default-features = false, features = [
    "rustls-tls",
    "json",
] }
sha2 = "0.10.6"
directories = "4.0"
jsonwebtoken = "8.0"
small-powers-of-tau = { git = "https://github.com/crate-crypto/small-powers-of-tau" }
rand = { version = "0.8.5" }
hex = "*"
owo-colors = "3"
kzg-ceremony-crypto = { git = "https://github.com/ethereum/kzg-ceremony-sequencer", features = [
    "blst",
] }
